--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.DjN2Jbno.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.D9TeBK6z.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.ug608r02.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.C9AON8UK.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CK8c6Y9C.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.CFowoOvZ.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.Dzv0QgBE.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.xXVwpfiD.js">
 		<style>
 			html,body {
@@ -23,15 +23,15 @@
 		<div style="display: contents; font-family: 'Inter', sans-serif;  font-optical-sizing: auto;">
 			<script>
 				{
-					__sveltekit_1an160j = {
+					__sveltekit_2f5ras = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.DjN2Jbno.js"),
-						import("./_app/immutable/entry/app.CFowoOvZ.js")
+						import("./_app/immutable/entry/start.ug608r02.js"),
+						import("./_app/immutable/entry/app.Dzv0QgBE.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
