--- a/index.html
+++ b/index.html
@@ -2,20 +2,25 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
+		<title>Hariharan R - Philanthropist and an Engineer</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.ug608r02.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.C9AON8UK.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.CK8c6Y9C.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.Dzv0QgBE.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/index.xXVwpfiD.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.B56sfIUV.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry._vpH2FWr.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.BfFByTuq.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.bLuZ7RIm.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/index.D4p59eMp.js">
 		<style>
 			html,body {
-				min-width:360px;
+				min-width:400px;
+			}
+
+			.sidebar-bgcolor {
+				background-color: rgba(39,40,45,.5);
 			}
 		</style>
 	</head>
@@ -23,15 +28,15 @@
 		<div style="display: contents; font-family: 'Inter', sans-serif;  font-optical-sizing: auto;">
 			<script>
 				{
-					__sveltekit_2f5ras = {
+					__sveltekit_1wx9abd = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.ug608r02.js"),
-						import("./_app/immutable/entry/app.Dzv0QgBE.js")
+						import("./_app/immutable/entry/start.B56sfIUV.js"),
+						import("./_app/immutable/entry/app.bLuZ7RIm.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
