--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="./_app/immutable/entry/start.D5g_Y4VX.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.CIBCb8UI.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.BMQsqJOR.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.Czs9Dk8T.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.BfFByTuq.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.BpYLlaGI.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.GJufHTyV.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.D4p59eMp.js">
 		<style>
 			html,body {
@@ -28,15 +28,15 @@
 		<div style="display: contents; font-family: 'Inter', sans-serif;  font-optical-sizing: auto;">
 			<script>
 				{
-					__sveltekit_1e3320q = {
+					__sveltekit_1ud12xc = {
 						base: new URL(".", location).pathname.slice(0, -1)
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("./_app/immutable/entry/start.D5g_Y4VX.js"),
-						import("./_app/immutable/entry/app.BpYLlaGI.js")
+						import("./_app/immutable/entry/start.BMQsqJOR.js"),
+						import("./_app/immutable/entry/app.GJufHTyV.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
