--- a/404.html
+++ b/404.html
@@ -2,17 +2,17 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<title>Hariharan R - Philanthropist and an Engineer</title>
+		<title>Hariharan R -  Socially empowering software developer</title>
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap" rel="stylesheet">
 		<link rel="icon" href="/favicon.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
-		<link rel="modulepreload" href="/_app/immutable/entry/start.BMQsqJOR.js">
-		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Czs9Dk8T.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/start.BgFsSlRd.js">
+		<link rel="modulepreload" href="/_app/immutable/chunks/entry.Df8gIPQh.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/scheduler.BfFByTuq.js">
-		<link rel="modulepreload" href="/_app/immutable/entry/app.GJufHTyV.js">
+		<link rel="modulepreload" href="/_app/immutable/entry/app.Boa2E9GC.js">
 		<link rel="modulepreload" href="/_app/immutable/chunks/index.D4p59eMp.js">
 		<style>
 			html,body {
@@ -28,15 +28,15 @@
 		<div style="display: contents; font-family: 'Inter', sans-serif;  font-optical-sizing: auto;">
 			<script>
 				{
-					__sveltekit_1ud12xc = {
+					__sveltekit_nr97qz = {
 						base: ""
 					};
 
 					const element = document.currentScript.parentElement;
 
 					Promise.all([
-						import("/_app/immutable/entry/start.BMQsqJOR.js"),
-						import("/_app/immutable/entry/app.GJufHTyV.js")
+						import("/_app/immutable/entry/start.BgFsSlRd.js"),
+						import("/_app/immutable/entry/app.Boa2E9GC.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element);
 					});
